ADD - Fonction qui ajouter a l'affichage et un objet associé